--- a/SchoolWeb/Views/Users/RegisterUser.cshtml
+++ b/SchoolWeb/Views/Users/RegisterUser.cshtml
@@ -19,12 +19,12 @@
             <div class="container">
                 <div class="row">
                     <div class="form-group col-md-4">
-                        <label asp-for="RoleId" class="control-label bg-light"></label>
+                        <label asp-for="RoleId" class="control-label"></label>
                         <select asp-for="RoleId" asp-items="Model.Roles" class="form-control"></select>
                         <span asp-validation-for="RoleId" class="text-danger small"></span>
                     </div>
                     <div class="form-group col-md-4">
-                        <label asp-for="ProfilePictureFile" class="control-label bg-light"></label>
+                        <label asp-for="ProfilePictureFile" class="control-label"></label>
                         <input asp-for="ProfilePictureFile" class="form-control" type="file" accept="image/*" />
                         <span asp-validation-for="ProfilePictureFile" class="text-danger small"></span>
                     </div>
