--- a/SchoolWeb/Views/Users/EditStudents.cshtml
+++ b/SchoolWeb/Views/Users/EditStudents.cshtml
@@ -46,7 +46,7 @@
                             {
                                 <tr>
                                     <td class="align-middle">
-                                        <img src="@Url.Content(item.ProfilePicture)" alt="Image" class="rounded-circle" style="width: 44px; height: 44px;  max-height: 100%; width: auto;" />
+                                        <img src="@Url.Content(item.ProfilePicture)" alt="Image" class="rounded-circle" style="width: 44px; height: 44px;" />
                                     </td>
                                     <td class="align-middle">
                                         @Html.DisplayFor(modelItem => item.FullName)
